force-app/main/default/objects/CPS_Response_MD__mdt/CPS_Response_MD__mdt.object-meta.xml
<CustomObject>
    <label>CPS Response</label>
    <pluralLabel>CPS Responses</pluralLabel>
</CustomObject>