force-app/main/default/objects/CPS_Response_MD__mdt/fields/Response_Id__c.field-meta.xml
<CustomField>
    <fullName>Response_Id__c</fullName>
    <label>Response Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>